# raytracer

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
images/: lab1.ppm  lab2.ppm  lab3 depth.ppm  lab3.ppm  lab4 2 depth.ppm  lab4 2.ppm  lab4 depth.ppm  lab4.ppm
report/: index.tex  refs.bib
report/images/: cognacglass.jpg:Zone.Identifier
src/: camera.rs  colour.rs  environment.rs  framebuffer.rs  fullcamera.rs  hit.rs  lib.rs  light.rs  linedrawer.rs  main.rs  material.rs  object.rs  photonmap.rs  polymesh_object.rs  ray.rs  scene.rs  transform.rs  vector.rs  vertex.rs
src/camera/: full.rs  simple.rs
src/light/: directional.rs  point.rs
src/material/: compound.rs  dielectric.rs  diffuse.rs  falsecolour.rs  metallic.rs  normalshading.rs  phong.rs
src/object/: csg.rs  plane.rs  polymesh.rs  quadratic.rs  sphere.rs  triangle.rs
