[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
unfinished = []

[dependencies]
acap = "0.3.0"
clap = { version = "4.4.10", features = ["derive"] }
glam = "0.21.3"
indicatif = "0.17.1"
png = "0.17.6"
rand = "0.8.5"

[profile.dev]
opt-level = 3
